# proofpack

./: .gitignore  README.md  action.yml  pyproject.toml
.github/workflows/: self-verify.yml
src/proofpack/: __init__.py  __main__.py  hook_entry.py  hooks.py  schemas.py
src/proofpack/checks/: __init__.py  acceptance_check.py  integrity_check.py  schema_check.py  scope_check.py  signum_check.py  summary.py
src/proofpack/commands/: diff.py  init.py  start.py  status.py  stop.py  verify.py  verify_signum.py
tests/: test_check_acceptance.py  test_check_integrity.py  test_check_schema.py  test_check_scope.py  test_check_signum.py  test_cli.py  test_cmd_diff.py  test_cmd_init.py  test_cmd_start.py  test_cmd_status.py  test_cmd_stop.py  test_cmd_verify.py  test_cmd_verify_signum.py  test_hook_entry.py  test_hooks.py  test_schemas.py
