[project]
name = "proofpack"
version = "0.1.0"
description = "Proof-carrying CI gate for AI agent changes"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = ["click>=8.1"]
authors = [
    { name = "Vitaly D." },
]

[project.scripts]
proofpack = "proofpack.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/proofpack"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
